--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "techno-boto-twitch",
+  "name": "GambleBot",
   "version": "0.0.0",
-  "description": "A Twitch Moderator Bot",
+  "description": "A Twitch Gambling Bot",
   "main": "src",
   "scripts": {
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Techno Tim",
+  "author": "Russell Brown",
   "license": "ISC",
   "dependencies": {
     "esm": "^3.2.25",
